updated the config file

--- a/LaTex_Vorlage/Assignments/LaTex/Titlepage.tex
+++ b/LaTex_Vorlage/Assignments/LaTex/Titlepage.tex
@@ -3,14 +3,14 @@
     \vspace*{3cm}
     {\Huge\bfseries Algorithmen und Datenstrukturen SoSe25 \par}
     \vspace{0.5cm}
-    {\Huge -Assignment 3- \par}
+    {\Huge -Assignment 11- \par}
     \vspace{1cm}
     {\Large Moritz Ruge \par}
     \vspace{0.1cm}
     {\small Matrikelnummer: 5600961 \par}
-    {\Large \{Vor-Nachname\} \par}
+    {\Large Lennard Wittenberg \par}
     \vspace{0.1cm}
     {\small Matrikelnummer: ---\par}
     \vfill
-    {\large Mai 2025}
+    {\large Juli 2025}
 \end{titlepage}
