--- a/LaTex_Vorlage/Assignments/LaTex/Assignment.tex
+++ b/LaTex_Vorlage/Assignments/LaTex/Assignment.tex
@@ -16,11 +16,13 @@
 
 %%% Import Aufgabe 2 %%%
 \input{Aufgabe_2.tex}
+\newpage
 
-	
+%%% Import Aufgabe 3 %%%
+\input{Aufgabe_3.tex}
 
 %Quellen Reference
-%\newpage
-%\printbibliography
+\newpage
+\printbibliography
 
 \end{document}
