--- a/LaTex_Vorlage/Assignments/LaTex/config.tex
+++ b/LaTex_Vorlage/Assignments/LaTex/config.tex
@@ -1,7 +1,7 @@
 \usepackage[left=3cm, right=2.5cm]{geometry} % Hier die Ränder definieren
 
-
-
+%\usepackage[T1]{fontenc}
+%\usepackage[ngerman]{babel}
 
 \usepackage[pdftex]{graphicx}
 %%%%% Path for Pictures %%%%%%
@@ -10,7 +10,7 @@
 \usepackage[backend=biber,style=numeric,url=true]{biblatex} % für Quellenangaben und Bibliotheken
 \usepackage[]{hyperref} % für hyperlinks
 \usepackage{array} % für die Tabelle
-\addbibresource{ref.bib}  % Add your .bib file here
+\addbibresource{quellen.bib}  % Add your .bib file here
 
 % Paket für die Baumdiagramdarstellung
 \usepackage{tikz}
@@ -28,7 +28,7 @@
 %{\color{blue}
 %Dies ist ein ganzer Absatz in Blau.
 %}
-\usepackage{xcolor}
+%\RequirePackage{xcolor} % wird vom Paket {easyReview} geladen
 
 %%%%% draws layout frames %%%%%
 %\usepackage{showframe}
@@ -37,6 +37,9 @@
 % see: https://www.overleaf.com/learn/latex/Multiple_columns
 \usepackage{multicol}
 
+%caption package
+%\captionof{}{}
+\usepackage{caption}
 
 % Text block indentation
 %\lipsum[1]
@@ -46,8 +49,7 @@
 %\lipsum[3]
 \usepackage{scrextend}
 
-% https://www.overleaf.com/learn/latex/Code_listing
-\usepackage{listings}
+\usepackage{easyReview} % for \comment, \alert, etc.
 
 \hypersetup{
     colorlinks=true,
@@ -58,3 +60,46 @@
     pdfpagemode=FullScreen,
     }
     
+
+%%% Code-Block design
+%%% Benutzung mit: 
+%%%%% \lstinputlisting[language=Scala]{./Code/Hashtable.scala} %%% für datein
+%%%%% \begin{lstlisting}[language=Scala] %%% für \begin und \end
+% https://www.overleaf.com/learn/latex/Code_listing
+\usepackage{listings}
+
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+\lstset{style=mystyle}
+
+\usepackage{fancyhdr}   % für benutzerdefinierte Kopf-/Fußzeilen
+\usepackage{lastpage}   % um auf die letzte Seite referenzieren zu können
+
+\pagestyle{fancy}
+\fancyhf{} % löscht Standard-Kopf- und Fußzeilen
+
+\fancyhead[L]{Moritz Ruge \& Lennard Wittenberg} % Linke Kopfzeile
+\fancyhead[C]{Assignment 11} % Linke Kopfzeile
+\fancyhead[R]{Algorithmen \& Datenstrukturen} % Linke Kopfzeile
+\fancyfoot[C]{\thepage/\pageref{LastPage}} % zentrierte Fußzeile mit "Seite/Gesamt"
