--- a/Semester_2/Algorithmen und Datenstrukturen/Zusatz_Assignment/LaTex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Zusatz_Assignment/LaTex/config.tex
@@ -99,7 +99,7 @@
 \pagestyle{fancy}
 \fancyhf{} % löscht Standard-Kopf- und Fußzeilen
 
-\fancyhead[L]{Moritz Ruge \& Lennard Wittenberg} % Linke Kopfzeile
-\fancyhead[C]{Assignment 11} % Linke Kopfzeile
+\fancyhead[L]{Moritz Ruge} % Linke Kopfzeile
+\fancyhead[C]{Assignment Zusatz} % Linke Kopfzeile
 \fancyhead[R]{Algorithmen \& Datenstrukturen} % Linke Kopfzeile
 \fancyfoot[C]{\thepage/\pageref{LastPage}} % zentrierte Fußzeile mit "Seite/Gesamt"
